@startuml ClassDiagram_LocalVectorEngine

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam backgroundColor white
skinparam class {
    BackgroundColor #EEF2FF
    BorderColor #3B4A9C
    ArrowColor #3B4A9C
}
skinparam package {
    BackgroundColor #F8F9FF
    BorderColor #3B4A9C
}

title LocalVectorEngine — UML Class Diagram\nCore library + Demo host

' ─── Core library ────────────────────────────────────────
package "LocalVectorEngine.Core" as Core {

    ' ─── Models ──────────────────────────────────────────
    package "Models" as Models {
        class "DocumentChunk\n<<record>>" as DocumentChunk {
            + DocumentId : string
            + ChunkIndex : int
            + Text : string
            + Source : string
        }

        class "SearchResult\n<<record>>" as SearchResult {
            + Chunk : DocumentChunk
            + Score : float
        }
    }

    ' ─── Interfaces ──────────────────────────────────────
    package "Interfaces" as Interfaces {
        interface IChunkingService {
            + Chunk(documentId, text, source) : IEnumerable<DocumentChunk>
        }

        interface IEmbeddingService {
            + EmbedAsync(text, ct) : Task<float[]>
        }

        interface IVectorStore {
            + StoreChunkAsync(chunk, embedding, ct) : Task
            + SearchAsync(queryEmbedding, topK, ct) : Task<IReadOnlyList<SearchResult>>
        }
    }

    ' ─── Services (concrete implementations) ─────────────
    package "Services" as Services {
        class SlidingWindowChunkingService {
            + {static} DefaultChunkSizeWords : int = 400
            + {static} DefaultOverlapWords   : int = 50
            - _chunkSize : int
            - _overlap   : int
            - _step      : int
            + Chunk(documentId, text, source) : IEnumerable<DocumentChunk>
        }

        class OnnxEmbeddingService {
            + {static} EmbeddingDimension : int = 384
            + {static} MaxSequenceLength  : int = 512
            - _session   : InferenceSession
            - _tokenizer : BertTokenizer
            + EmbedAsync(text, ct) : Task<float[]>
            + Dispose()
        }

        class BLiteVectorStore {
            + {static} EmbeddingDimension : int = 384
            - _db         : VectorStoreDbContext
            - _writeLock  : SemaphoreSlim
            + StoreChunkAsync(chunk, embedding, ct) : Task
            + SearchAsync(queryEmbedding, topK, ct) : Task<IReadOnlyList<SearchResult>>
            + Dispose()
        }
    }

    ' ─── Persistence (BLite mapping) ─────────────────────
    package "Persistence" as Persistence {
        class VectorChunkEntity {
            + Id          : ObjectId
            + DocumentId  : string
            + ChunkIndex  : int
            + Text        : string
            + Source      : string
            + Embedding   : float[]
        }

        class VectorStoreDbContext {
            + {static} EmbeddingDimension : int = 384
            + {static} VectorIndexName    : string = "idx_chunk_embedding"
            + Chunks : DocumentCollection<ObjectId, VectorChunkEntity>
            # OnModelCreating(ModelBuilder)
        }
    }
}

' ─── Demo host ──────────────────────────────────────────
package "LocalVectorEngine.Demo" as Demo {
    class Program {
        + Main(args) : Task
    }
}

' ─── Relationships ──────────────────────────────────────
SearchResult --> DocumentChunk : wraps >

SlidingWindowChunkingService ..|> IChunkingService
OnnxEmbeddingService         ..|> IEmbeddingService
BLiteVectorStore             ..|> IVectorStore

IChunkingService  ..> DocumentChunk : produces >
IEmbeddingService ..> "float[]"     : produces >
IVectorStore      ..> DocumentChunk : persists >
IVectorStore      ..> SearchResult  : returns >

BLiteVectorStore     --> VectorStoreDbContext : owns >
VectorStoreDbContext --> VectorChunkEntity    : stores >

Program --> IChunkingService  : uses
Program --> IEmbeddingService : uses
Program --> IVectorStore      : uses

@enduml
